   -- Fixed a bug in the EASIER_UNDERWORLD code pointed out by
      Stephen Baillie (baillie@cs.mu.oz.au) which caused it to only work on
      level 0-2 inclusive.
   -- Fixed a bug in IMPROVED_FARSIGHT code which was pointed out by Stephen
      Baillie (baillie@cs.mu.oz.au) which caused it give odd results if
      multiple mages from the same faction with different skills cast farsight
      on the same hex during a turn.
   -- Fixed bug in BUILD HELP which caused an infinite loop when the helper
      was already in the building to be helped with.
   -- Fixed bug in NOSPOILS code which caused an infinite loop if no army
      unit would accept spoils.
   -- Fixed another bug in the NOSPOILS code.  NOSPOILS was supposed to still
      allow 0 weight and weight < walking capacity items to be aquired.  It
      wasn't.
   -- Fixed a bug where WITHDRAW was not being noted as an invalid order if
      the ALLOW_WITHDRAW gamedef was not set.
   -- Fixed a bug with GM_REPORT which caused it not to work except on turn 1.
   -- Added transit patch submitted by Stephen Baillie <baillie@cs.mu.OZ.AU>.
      This patch enables the GM to show hex information to units which pass
      through a hex but do not end the turn there.  The bits of information
      which are shown are completely selectable from an enumeration in
      gamedefs.h and default to the current behaviour (no reports).
      WARNING: In an attempt to prevent clients from breaking, if you show
      reports but do not show a specific piece of information (ie, wages or
      entertainment or resources) the hex report will appear as if the hex
      has NONE of that type of information (ie, wages 0, or Products: none).
      So, be careful when turning this on as it COULD give your players a
      false sense of having accurate data when they do not!
   -- Added the 'harp' item created by Ceran II
   -- Did a lot of work to handle spell damages and effects in a
      customizable manner.