@@ -278,3 +278,6 @@ Changes from 4.0.7 -> 4.0.8
    -- Added the 'harp' item created by Ceran II
    -- Did a lot of work to handle spell damages and effects in a
       customizable manner.
+   -- Moved the makefiles out of the subdirectories and coallesced them into
+      one makefile at the top level which can be used to build the various
+	  games.  By default the 'standard' game is built.
